# celerium

./: .gitignore  LICENSE  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  generate_conf.sh  orbital.h
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
demo/CuO2Plane/: Cu.UPF  Makefile.am  O.UPF  demo_cuo2plane.cpp
demo/CuO2Plane/gnuplot_heat_map/: gplot.gp  gplot.sh  wykres-inc.eps  wykres.dvi  wykres.ps  wykres.tex
headers/: .constants.h.swp  .cubawrapper.h.swp  .newcubawrapper.h.swp  .potential.h.swp  \  arithmeticvector.h  atomic_wave_function.h  basis.h  constants.h  cubawrapper.h  element.h  elementary_cell.h  gslbilinear.h  gslmatrix.h  gslmatrixcomplex.h  gslnonlinear.h  hamiltonian_generator.h  interpolator.h  interpolator3d.h  lattice.h  lowdin.h  newcubawrapper.h  orbital.h  orbital_class.h  periodic_lowdin.h  periodic_wannier.h  potential.h  spherical_harmonics.h  wfsolver.h  wfsolver_interface.h  wfsolverinterface.h
lib/: atomic_wave_function.cpp  gslmatrix.cpp  gslmatrixcomplex.cpp  interpolator.cpp  lattice.cpp  newcubawrapper.cpp  periodic_wannier.cpp  spherical_harmonics.cpp  wfsolver.cpp
lib/WFSolver/: Makefile.am  Makefile.in
lib/WFSolver/include/: interpolator.h  wfsolver.h
lib/WFSolver/src/: interpolator.cpp  wfsolver.cpp
lib/WFSolver/src/.deps/: libwfsolver_a-interpolator.Po  libwfsolver_a-wfsolver.Po
tests/ArithmeticVector/: Makefile.am  Makefile.in  main.cpp  makefile  vector
tests/ArithmeticVector/.deps/: test_arithmetic_vector-main.Po
tests/AtomicWaveFunction/: Makefile.am  test_atomic_wave_function.cpp
tests/Bilinear/: main.cpp  start
tests/CubaWrapper/: Makefile.am  test_cuba_wrapper.cpp
tests/Element/: Makefile.am  test_element.cpp
tests/ElementaryCell/: Makefile.am  test_elementary_cell.cpp
tests/GslWrapper/: main.cpp
tests/HamiltonianGenerator/: Makefile.am  calculate_hamiltonian.sh  run_one.sh  test_hamiltonian_generator.cpp
tests/Interpolator/: Makefile.am  test_interpolator.cpp
tests/Interpolator3d/: Makefile.am  test_interpolator3d.cpp
tests/Lattice/: Makefile.am  test_lattice.cpp
tests/NewCubaWrapper/: main.cpp  start
tests/Nonlinear/: main.cpp
tests/OrbitalClass/: Makefile.am  test_orbital_class.cpp
tests/PeriodicLowdin/: Makefile.am  test_periodic_lowdin.cpp  test_periodic_wannier.cpp
tests/PeriodicWannier/: Makefile.am  test_periodic_wannier.cpp
tests/Potential/: Cr.UPF  Makefile.am  broken.upf  main.cpp  makefile
tests/PotentialAndWFSolver/: Makefile.am  test_potential_and_wfsolver.cpp
tests/SphericalHarmonics/: Makefile.am  test_spherical_harmonics.cpp
tests/WFSolver/: Makefile.am  Makefile.in  test_wfsolver.cpp
tests/WFSolver/.deps/: test_wfsolver-test_wfsolver.Po
tests/WFSolverInterface/: test_wfsolver.cpp
