AUTOMAKE_OPTIONS = foreign

SUBDIRS = tests/ArithmeticVector tests/WFSolver tests/PotentialAndWFSolver tests/Potential tests/Interpolator tests/SphericalHarmonics tests/ElementaryCell tests/Element tests/OrbitalClass tests/CubaWrapper tests/PeriodicWannier tests/Lattice tests/Interpolator3d demo/CuO2Plane
