AM_CPPFLAGS = -I$(top_srcdir)/headers
noinst_PROGRAMS = test_atomic_wave_function.x
test_atomic_wave_function_x_SOURCES = test_atomic_wave_function.cpp
test_atomic_wave_function_x_LDADD = -lgsl -lgslcblas -lm -lcuba
test_atomic_wave_function_x_CXXFLAGS = -Wall -std=c++17
test_atomic_wave_function_x_LDFLAGS = 

