AM_CPPFLAGS = -I$(top_srcdir)/headers
noinst_PROGRAMS = test_elementary_cell.x
test_elementary_cell_x_SOURCES = test_elementary_cell.cpp ../../lib/newcubawrapper.cpp
test_elementary_cell_x_LDADD = -lgsl -lgslcblas -lm -lcuba
test_elementary_cell_x_CXXFLAGS = -pedantic -Wall -std=c++17
test_elementary_cell_x_LDFLAGS = 

